Aplikacja/Deployment/angular-ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: angular-ingress
  # namespace: frontend-apps
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx
  rules:
  - host: oto-auto-angular.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: oto-auto-angular-service
            port:
              number: 4200
